# neural-reversi-training

./: .gitignore  README.md  dataset.py  model.py  model_common.py  model_sm.py  model_wasm.py  probcut.py  probcut_common.py  probcut_endgame.py  pyproject.toml  quant.py  serialize.py  serialize_all.py  serialize_sm.py  serialize_utils.py  serialize_wasm.py  space_linear.py  sparse_linear.py  train.py  version.py
dataset/: __init__.py  setup.py
dataset/csrc/: bin_dataset.cpp  bitboard.h  dataset.cpp  dataset.h  patterns.h
feature_dataset/: __init__.py  setup.py  test_feature_dataset.py
feature_dataset/csrc/: feature_dataset.cpp  feature_dataset.h
models/: model_common.py  model_lg.py  model_sm.py  model_wasm.py  phase_adaptive_input.py  stacked_linear.py
models/serialization/: serialize_common.py  serialize_lg.py  serialize_sm.py  serialize_wasm.py
probcut/: __init__.py  probcut_common.py  probcut_endgame.py  probcut_midgame.py
scripts/: probcut.py  serialize.py  serialize_all.py  train.py
sparse_linear/: __init__.py  setup.py
sparse_linear/benchmarks/: bench_sparse_linear.py  correctness_check.py  prof_bwd.py
sparse_linear/csrc/: onehot_sparse_linear.cpp  onehot_sparse_linear_cuda.cu
training/: dataset.py
