[project]
name = "neural-reversi-training"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.5",
    "pandas>=2.3.0",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "tensorboardx>=2.6.4",
    "timm>=1.0.19",
    "torch>=2.9.0",
    "torchvision>=0.24",
    "zstandard>=0.23.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
