[project]
name = "neural-reversi-training"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "lightning>=2.6.0",
  "pandas>=3.0.0",
  "ruff>=0.14.14",
  "scikit-learn>=1.8.0",
  "tensorboardx>=2.6.4",
  "timm>=1.0.24",
  "torch>=2.10.0",
  "torchvision>=0.25",
  "zstandard>=0.25.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
