[project]
name = "neural-reversi-training"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "lightning>=2.6.5",
  "pandas>=3.0.3",
  "ruff>=0.15.15",
  "scikit-learn>=1.8.0",
  "tensorboard>=2.20.0",
  "timm>=1.0.27",
  "torch>=2.12.0",
  "torchvision>=0.27",
  "zstandard>=0.25.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
